<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>virtual_depth_camera</name>
  <version>0.0.0</version>
  <description>Virtual Camera Package. Purpose of this package is to synthesize an image of the robot, emulating the robot configurate and camera parameters. The output image is used as a mask, to determine the position of a robot in an RGBD image</description>
  <maintainer email="savvas.sampaziotis@gmail.com">savvas</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
